completed landing page

--- a/foundations/flex/landing-page/index.html
+++ b/foundations/flex/landing-page/index.html
@@ -22,8 +22,29 @@
         </ul>
     </div>
     <div class="content">
+        <div class="tile-container">
+            <div class="tile-header">Upcoming Projects</div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit aut laboriosam consequatur nisi dicta! Velit, commodi doloremque perferendis repudiandae harum ipsa illo similique deserunt magnam tempora sit aut eius neque!</p>
+        </div>
+        <div class="tile-container">
+            <div class="tile-header">Monthly Summary</div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit aut laboriosam consequatur nisi dicta! Velit, commodi doloremque perferendis repudiandae harum ipsa illo similique deserunt magnam tempora sit aut eius neque!</p>
+        </div>
+        <div class="tile-container">
+            <div class="tile-header">Invoice Receiving</div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit aut laboriosam consequatur nisi dicta! Velit, commodi doloremque perferendis repudiandae harum ipsa illo similique deserunt magnam tempora sit aut eius neque!</p>
+        </div>
+        <div class="tile-container">
+            <div class="tile-header">Outgoing Rentals</div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit aut laboriosam consequatur nisi dicta! Velit, commodi doloremque perferendis repudiandae harum ipsa illo similique deserunt magnam tempora sit aut eius neque!</p>
+        </div>
     </div>
     <div class="footer">
+        <ul class="left-links">
+            <li>About</li>
+            <li>Documentaion</li>
+            <li>Terms</li>
+        </ul>
     </div>
 </body>
 </html>
